# Xora

./: LICENSE  README.md  flake.nix  format.sh  meson.build  meson_options.txt  xora.scm
assets/: config.conf  xora-portals.conf  xora.desktop
docs/: faq.md  index.md  installation.md  ipc.md  meta.json  quick-start.md
docs/bindings/: index.mdx  keys.md  meta.json  mouse-gestures.md
docs/configuration/: basics.md  index.mdx  input.md  meta.json  miscellaneous.md  monitors.md  xdg-portals.md
docs/visuals/: animations.md  effects.md  index.mdx  meta.json  status-bar.md  theming.md
docs/window-management/: index.mdx  layouts.md  meta.json  overview.md  rules.md  scratchpad.md
nix/: default.nix  hm-modules.nix  lib.nix  nixos-modules.nix
protocols/: meson.build
src/: xora.c
src/animation/: client.h  common.h  layer.h  tag.h
src/client/: client.h
src/common/: util.c  util.h
src/config/: parse_config.h  preset.h
src/data/: static_keymap.h
src/dispatch/: bind_declare.h  bind_define.h
src/ext-protocol/: all.h  dwl-ipc.h  ext-workspace.h  foreign-toplevel.h  tearing.h  text-input.h  wlr_ext_workspace_v1.c  wlr_ext_workspace_v1.h
src/fetch/: client.h  common.h  fetch.h  monitor.h
src/layout/: arrange.h  horizontal.h  layout.h  vertical.h
xctl/: arg.h  dynarr.h  xctl.c
